Maybe work, maybe shit

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,8 @@
 <body>
     <h1>Checkers</h1>
     <div id="board"></div>
-    
+
+    <button id="make-move-button">Make Move</button>
     
     <script src="app.js" type="module"></script>
 </body>
